add new and archived version of paper

--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/main.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/main.tex
@@ -23,6 +23,15 @@ Latest version \href{https://bas-m.netlify.app/The_Wealth_of_Dutch_Politicians__
 \section{Introduction}
     
     Between 1848 and roughly 1920, the Netherlands saw a radical transformation of its economy and its institutions. The economy transformed itself from a largely agricultural economy to a fully-fledged industrialized economy based largely on industry, services and international trade.\autocite{van2004strictures} This economic change was accompanied by radical changes in the country’s political institutions: after the reform in 1848, politics was largely dominated by aristocrats and loyalists of the King. In the decades afterwards, the political system was transformed into a constitutional monarchy, where the power of the monarch became more and more symbolic. This took the form of several amendments to the constitution, which encompassed the abolition of various restrictions regarding eligibility and suffrage, culminating in the introduction of universal suffrage in 1919 \autocite{van2018tussen}. Finally, religion took a more active role in the country, being manifest in politics but also in wider society, in a process frequently dubbed pillarization. 
+    
+    Throughout the nineteenth and early twentieth centuries, political elites have decided relinquished their power, granting suffrage extensions and abolishing eligibility restrictions so that gradually, more and more individuals could participate in the political process. This study focuses on the (changing) composition of the political elite in this process, and more particularly, on their personal wealth. In previous literature, various aspects of the composition of the political elite have been investigated, both nationally and internationally. One aspect that has been left out of the picture, but is nevertheless relevant, is their personal wealth. %This study investigates the dynamics of the personal wealth of politicians throughout the late nineteenth and early twentieth centuries, providing a decomposition according to political affiliation, political position, parliamentary standing. It also takes into account politicians' investment portfolio, development of personal wealth among regional politicians, and investigates inequality among politicians. 
+    
+    %Summary of results
+    From the roughly 1000 individuals who have been politically active in the Netherlands on the national level in the period of 1870 until 1920, we find probate inventories of 752 politicians, and we show how wealthy politicians in different representative bodies and with different ideological affiliations are. We shed light on two questions: firstly, do there exist substantial differences in wealth between politicians of different religious affiliation or political ideology? Next, we compare average and median wealth levels per parliamentary standing, which gives us an overview of the dynamics over time. We provide an overview of the wealthiest politicians, and also focus on their portfolio shares. Finally, we also focus on the wealth of governments (Ministers) and investigate inequality within parliamentary standings. 
+
+    Our most important results show that throughout the entire period of investigation, there is a substantial gap between the wealth of politicians and the wealth of the general population in all representative bodies. The gap is largest in the upper house, consistent with both the exclusive nature of the upper house and legal restrictions to eligibility, but it was also substantial for executives, and perhaps more surprisingly, for the lower house members. Even though the lower house was in theory accessible to any male candidate since 1848, in practice, elected politicians were on average much wealthier than the general population, and the gap between politicians and the general population only began to narrow in the early 20th century, after significant suffrage extensions had been effectuated. Nevertheless, the gap still remained very large, with the median politician to be in the upper decile of the wealth distribution, according to our estimates. On the other hand, there were a substantial number of lower house politicians who died with practically no estate, similar to the median Dutch citizen at the time.\autocite{de2020exploring}
+    
+\section{Literature Review}
 
     Dutch political scientists and political historians have since long shown interest in the inner workings, the interactions, and consequences of the evolution of the Dutch political system, and more specifically, why this transformation took place so fast. Arguably, the most influential work is Lijphart, who investigates the Dutch political system and the causes of its stability and functioning from 1917 until the late 1960s.\autocite{lijphart1975politics} His vision implies that there is very little, if any, room for the background of politicians to play a role in this process: leaders of the country’s leading political factions can best be thought of selfless, and constantly willing to compromise for the sake of political stability. He illustrates that politicians from leading political parties have been ready to make excessive compromises, preventing the alienation of the opposition at high costs: sometimes to the detriment of their own objectives, sometimes to the detriment of their electorate. %Lijphart is battling the pluralist view of democracy, according to which governments work together with multiple non-government actors to synthesize the objectives of diverse constituencies and interest-groups. Lijphardt puts forth the Netherlands as a case study and argues that, on the contrary, decision-making was effectuated almost entirely by, and on the initiative of, elites. Lijphart’s explanation focuses on political elites understanding the benefits of cooperation and compromise: politicians from leading political parties have been ready to make excessive compromises, preventing the alienation of the opposition at high costs: sometimes to the detriment of their own objectives, sometimes to the detriment of their electorate. In effect, Lijphart argues that the 1917 Pacification serves in effect as a signal of commitment to the political process and future concessions from the part of virtually all political factions. 
 
@@ -60,11 +69,6 @@ Latest version \href{https://bas-m.netlify.app/The_Wealth_of_Dutch_Politicians__
     It is often found that the personal interests of politicians find their way in political decision-making. For example, Tahoun and Van Lent find that US politicians with a higher financial asset share are more inclined to vote against financial regulation in the 2014 financial crisis.\autocite{tahoun2019personal} Similarly, there is a large literature of political connections, documenting that politicians prioritize firms with which they are personally connected\autocite[see e.g.][]{duchin2012politics}. These political connections are also discovered and valued by the market.\autocite{fisman2001estimating} Furthermore, in the political economy literature, focusing principally on the United States, Ferraz and Finan argue that monetary rewards are the principal motivation for politicians.\autocite{ferraz2009motivating}
     
     In sum, despite the literature having implied at numerous places that financial interests of politicians should play a role in the political process, there have been no systematic attempts to find out systematically what those interests encompassed for the Dutch political elite. This study is, to the author's knowledge, the first study that attempts to investigate the personal wealth of politicians throughout the entire late nineteenth and early twentieth centuries. In doing so, this study attempts to augment and nuance the existing perspectives on the relationship between the backgrounds of politicians, their behavior, and the consequences thereof by focusing on one aspect that has frequently been left out of the debate. 
-    
-    %Summary of results
-    From the roughly 1000 individuals who have been politically active in the Netherlands on the national level in the period of 1870 until 1920, we find probate inventories of 752 politicians, and we show how wealthy politicians in different representative bodies and with different ideological affiliations are. We shed light on two questions: firstly, do there exist substantial differences in wealth between politicians of different religious affiliation or political ideology? Next, we compare average and median wealth levels per parliamentary standing, which gives us an overview of the dynamics over time. We provide an overview of the wealthiest politicians, and also focus on their portfolio shares. Finally, we also focus on the wealth of governments (Ministers) and investigate inequality within parliamentary standings. 
-
-    Our most important results show that throughout the entire period of investigation, there is a substantial gap between the wealth of politicians and the wealth of the general population in all representative bodies. The gap is largest in the upper house, consistent with both the exclusive nature of the upper house and legal restrictions to eligibility, but it was also substantial for executives, and perhaps more surprisingly, for the lower house members. Even though the lower house was in theory accessible to any male candidate since 1848, in practice, elected politicians were on average much wealthier than the general population, and the gap between politicians and the general population only began to narrow in the early 20th century, after significant suffrage extensions had been effectuated. Nevertheless, the gap still remained very large, with the median politician to be in the upper decile of the wealth distribution, according to our estimates. On the other hand, there were a substantial number of lower house politicians who died with practically no estate, similar to the median Dutch citizen at the time.\autocite{de2020exploring}
 
 \section{Definition of the Political Elite}
     The political elite is often used as a synonym for a country's rulers, however, it is subjective in its nature. In this paper, we take the political elite to consist of following individuals: First, all lower house members, that is to say, representatives elected directly by the enfranchised population. Compared to the restrictions on eligiblity for the upper house, there were almost no restrictions on being a member of the lower house: one had to be male, and be 30 years or older, which was decreased to 25 years or older following the introduction of male suffrage in 1917. The exclusion of female candidates was subsequently ended in 1918. \autocite{van2018tussen} 
@@ -201,13 +205,13 @@ Latest version \href{https://bas-m.netlify.app/The_Wealth_of_Dutch_Politicians__
     
 \subsection{Central Government}
 \begin{center}
-    [table wealth ministers (wealth\_kabinet.R) over time (table \ref{tab:avgwealthtimegovt}]
+    [table wealth ministers (wealth\_kabinet.R) over time (table \ref{tab:wealthofkabinet}]
  \end{center}   
     We also investigate the wealth of the executive branch of government over time. Similarly to the investigations of upper and lower house, we have data regarding which ministers have served in which governments, so as to get a very nuanced overview of the average wealth of a government over time. The data is fairly complete: for each government, the data coverage is very high (only 1 or 2 ministers are missing), with the exception for the Ruijs van Beerenbrouck government, which has a coverage of 44\%. We observe large variations in average wealth of governments over time: both confessional, coalitional and liberal governments have at times very wealthy executives, and at times quite poor executives. The first government under investigation, the liberal Thorbecke III, has a median wealth of around 100,000 guilders, and subsequent governments appear to be richer on average, culminating in the Kappeyne van de Coppello government, whose median wealth is over 400,000 guilders. The confessional governments by Heemskerk Azn., Mackay, Kuyper are relatively poor, but so are the liberal Pierson and Cort van den Linden governments (their median wealth at death is about 100,000 guilders). The liberal van Tienhoven government stands out by being wealthier than both its predecessors and successors. 
     
     In the last column, we also show the wealth of the government's prime minister, in case their \textit{Memories} were found. The poorest prime minister was Theo de Meester, the liberal prime minister  who governed from 1905 to 1908, while simultaneously serving as Minister of Finance. His government did not preside over a majority in parliament, and accomplished relatively little, and resigned over an unapproved military budget. Some of the richest prime ministers were Constantijn Van Lynden van Sandenburg, an orthodox protestant Prime Minister, and Jan Heemskerk Azn., the liberal prime minister, who headed the government twice. 
     
-    The above discussion makes clear that there is ample variation in median wealth between various cabinets, and there is also variation in wealth between prime ministers. To put these numbers into perspective, let us again assume that politicians are able to realize a 3\% return on their net wealth, almost all prime ministers were almost surely independent, and could live on their capital income, with the possible exception of the aforementioned prime minister De Meester, who had a net wealth at time of death of 36,111 deflated guilders, which would have still earned him about four times the average income in capital income, but the ministers' allowance of 1200 guilders (numbers for 1920) would make up the larger part of his income.\autocite{berg1999ongelijkheid} 
+    The above discussion makes clear that there is ample variation in median wealth between various cabinets, and there is also variation in wealth between prime ministers. To put these numbers into perspective, let us again assume that politicians are able to realize a 3\% return on their net wealth. Then, almost all prime ministers were almost surely independent, and could live on their capital income, with the possible exception of the aforementioned prime minister De Meester, who had a net wealth at time of death of 36,111 deflated guilders, which would have still earned him about four times the average income in capital income. However, on the other hand, the ministers' allowance of 12,000 guilders would make up the larger part of most of the ministers incomes, especially for cabinets towards the end of the 19th and early 20th centuries. \autocite{berg1999ongelijkheid} \footnote{Their allowance, at times called \textit{tractement, bezoldiging} or \textit{jaarwedde} increased to 18,000 guilders after 1918.}  In those governments, the median wealth of a central government executive was about 100,000 guilders or lower, implying the 12,000 annual remittance made up the large majority part of their income, even if the interest rate were much higher than 3\%.
     
 \subsection{Provincial Government}
 \begin{center}    
@@ -238,7 +242,7 @@ Latest version \href{https://bas-m.netlify.app/The_Wealth_of_Dutch_Politicians__
 
     Additionally, we investigated party and time-related differences in the portfolio composition. Polticians' portfolio seems to have been comparable with any other investor's. Paradoxically, both (generally wealthy) upper house members have large shares of their wealth invested in real estate, and the same appears to be true for (generally less wealthy) socialists. One possible explanation for this fact is that the \textit{Lijst van hoogst aangeslagenen} biased the eligible candidates for upper house membership towards those wealthy persons with significant real estate shares, because taxes were levied principally on real estate. As the fiscal burden started to shift towards other assets, the average real estate share of upper house politicians started to fell, as evidenced by the comparisons over time. As for socialist politicians, this reflects a well-known empirical fact in contemporary portfolio theory, namely that 
 
-    Finally, we also made an attempt of finding the wealth of the most powerful politicians: the government. We find that, although there are large differences between governments in terms of average and median wealth, there appears to be no strong correlation between the private estate value of the executives and their political color, or law-making profile, although governments and parliaments responsible for the most significant increases in taxation (by means of the \textit{Inkomenstenbelasting} in 1893 and 1914) were among the poorest on average.
+    Finally, we also made an attempt of finding the wealth of the most powerful politicians: government officials. We find that, although there are large differences between governments in terms of average and median wealth, there appears to be no strong correlation between the private estate value of the executives and their political color, or law-making profile, although governments and parliaments responsible for the most significant increases in taxation (by means of the \textit{Inkomenstenbelasting} in 1893 and 1914) were among the poorest on average. We also find that these politicians were the most dependent on their political salary, as it made up a very large share of their income, compared with capital income. The executives are also poorer on average than lower and upper house members, especially towards the end of the nineteenth and start of the twentieth centuries.
 
     This work contributes firstly to politico-historical research about the Dutch nineteenth and twentieth centuries focusing on the social origin of politicians, by asking how wealthy political elites are, and to which extent the wealth of the political elite is concentrated. \autocite{van1983toegang, secker1989social, secker1991ministers, van1999eerste, moes2012onder} In this way, this work adds another relevant dimension to the literature about the social origins of politicians, something which historians and political scientists have focused on since the 1960s.\autocite{dogan1967filieres,van1983toegang} Secondly, it contributes to a literature on inequality and political representation, providing evidence that even after a process of democratization, the political elite is far from representative of the general electorate in terms of wealth.\autocite{dalton1985political}
 
@@ -248,7 +252,7 @@ Latest version \href{https://bas-m.netlify.app/The_Wealth_of_Dutch_Politicians__
 
     More broadly, the findings call for further research into the extent and quality of representation and its effects as a function of various factors, of which wealth is but one aspect. It is also highly likely that the effect of the quality of representation on legislation or economic development is heterogeneous. It might, for example, vary strongly, depending on political institutions, democratic responsiveness, electoral competition, and dissemination of information by a functioning press. Research in Europe has recently taken into account characteristics such as political dynasties, the threat of revolution, and electoral opportunism. \autocite{aidt2014workers, oosterlinck2020positive, aidt2019motivates} Accordingly, this study suggests that the literature can be more attentive to explicit personal interests of politicians, such as wealth. 
 
-    Coming back to the subject of wealth, it seems that it is possible to retrieve probate inventories of high-profile individuals in the UK, and in France, the \textit{Archives départementales} shelter similar appraisals of assets and liabilities as do the Dutch \textit{Memories van Successie}, which have been used by Estèbe.\autocite{estebe1982ministres} \autocite{bottomley2019returns} \footnote{\href{https://archives.cd08.fr/arkotheque/client/ad_ardennes/_depot_arko/articles/1834/tables-des-successions-et-absences-_doc.pdf}{Here} is a document detailing how to find the French equivalents to the \textit{Memories van Successie}.} Other countries might have archival sources similar to the aforementioned ones, and given the trend toward digitization that allows researchers to efficiently access international archives, finding relevant information about wealth, estate value, and the financial position of politicians in the late modern era may give us a nuanced and detailed view of the role of politicians in the political and economic development of Europe in the 19th and early 20th centuries. 
+    Coming back to the subject of wealth, it seems that it is possible to retrieve probate inventories of high-profile individuals in the UK, and in France, the \textit{Archives départementales} shelter similar appraisals of assets and liabilities as do the Dutch \textit{Memories van Successie}, which have been used by Estèbe.\autocite{estebe1982ministres, bottomley2019returns} \footnote{\href{https://archives.cd08.fr/arkotheque/client/ad_ardennes/_depot_arko/articles/1834/tables-des-successions-et-absences-_doc.pdf}{Here} is a document detailing how to find the French equivalents to the \textit{Memories van Successie}.} Other countries might have archival sources similar to the aforementioned ones, and given the trend toward digitization that allows researchers to efficiently access international archives, finding relevant information about wealth, estate value, and the financial position of politicians in the late modern era may give us a nuanced and detailed view of the role of politicians in the political and economic development of Europe in the 19th and early 20th centuries. 
 
 %\bibliographystyle{apalike}
 %\bibliography{references}
