--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/table_wealth_kabinet.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/tables/table_wealth_kabinet.tex
@@ -1,6 +1,6 @@
 % latex table generated in R 4.0.2 by xtable 1.8-4 package
 % Fri Oct 30 13:07:08 2020
-\begin{table}[ht]
+\begin{table}[ht] 
 \centering
 \begin{tabular}{lllrlr}
   \hline
@@ -24,5 +24,6 @@ Thorbecke III & liberal & 1870-1872 & 95.6 & NA &  7 \\
    \hline
 \end{tabular}
 \caption{Average Wealth of Governments (1000 guilders)} 
+\label{tab:wealthofkabinet}
 \floatfoot{This table shows the median wealth of governments, including, if available, the wealth of the Prime Minister (WealthPM),in 1000 guilders, in values of 1900.}
 \end{table}
